static/css/style.css
/* ... */
    
    .author {
        margin: 5px 25px 5px 10px;
        color: #ccc;
        /* align-items: flex-end; */
    }
    
    #picasso {
        background-color: #f5f5f5;
    }
    
    .imageCardLight {
        margin: 15px;
        /* width: 100%; */
        display: flex;
        align-items: flex-start;
        border-radius: 5px;
        color: #0e0e0e;
    }
    
    .imgTitleLight a {
        text-decoration: none;
        color: #0e0e0e;
        transition: 0.5s;
    }
    
    .imgTitleLight a:hover {
        text-decoration: underline;
        text-decoration-color: #444;
        color: #222
    }
    
    .imgTitleLight h3 {
        font-weight: 600;
        margin: 10px;
    }
    
    .authorLight {
        margin: 5px 25px 5px 10px;
        color: #999;
        /* align-items: flex-end; */
    }
    
    .desc {
        margin: 20px;
    }
    
    .pad-15 {
        padding: 15px;
    }
    
    .editor-container {
        display: flex;
        flex-direction: row;
        align-items: center;
        margin-top: 50px;
    }
    
    textarea {
        width: 400px;
        height: 200px;
        margin-bottom: 20px;
        padding: 5px;
        border: none;
    }
    
    .editorBtn {
        margin-right: 10px;
        background-color: #ddd;
        border-radius: 5px;
        border: none;
        cursor: pointer;
        height: 30px;
        margin: 2px;
        display: inline;
        font-size: 16px;
    }
    
    .editorBtn:hover {
        background-color: #ccc
    }
    
    .imagePicaDetailCont {
        display: block;
        padding-right: 5px;
        padding-bottom: 5px;
    }
    
    .imagePicaDetail {
        float: left;
        margin-right: 20px;
        max-width: 400px;
    }
    
    .picaDetailPara {
        flex-grow: 1;
        margin-right: 10px;
        /* Allow text to grow to fill available space */
    }
    
    .imageCaseContCont {
        display: grid;
    }
    
    .imageCaseCont {
        display: grid;
        grid-template-columns: 1fr 1.5fr;
        grid-column: span 2;
    }
    
    .imageCaseImg {
        width: 100%;
        max-width: 500px;
        margin-bottom: 10px;
        /* align-content: center; */
    }
    
    .imageCaseP {
        text-align: right;
        padding: 10px;
    }
    
    .imgType {
        font-weight: 600;
        color: #888;
        margin: 5px;
    }
    
    .blogCont {
        display: grid;
        grid-template-columns: 1fr;
        justify-items: center;
    }
    
    .blog-post {
        background-color: #fff;
        border-radius: 8px;
        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
        margin: 20px 5%;
        padding: 20px;
        max-width: 800px;
        min-width: 80%;
        grid-template-columns: 1fr;
    }
    
    .blog-post-title {
        background-color: #333;
        color: #fff;
        padding: 10px;
        border-top-left-radius: 8px;
        border-top-right-radius: 8px;
        margin: -20px -20px 20px -20px;
    }
    
    .blog-post-date {
        font-size: 14px;
        color: #666;
    }
    
    .blog-post-text {
        line-height: 1.6;
    }
    
    .blog-post-2 {
        background-color: #eef;
        border-radius: 8px;
        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
        margin: 20px 5%;
        padding: 20px;
        max-width: 800px;
        min-width: 80%;
        grid-template-columns: 1fr;
    }
    
    .blog-post-title-2 {
        background-color: #335;
        color: #efefff;
        padding: 10px;
        border-top-left-radius: 8px;
        border-top-right-radius: 8px;
        margin: -20px -20px 20px -20px;
    }
    
    .no-link-title {
        color: #efefff;
        text-decoration: none;
    }
    
    .no-link-title:hover {
        color: #eef;
        text-decoration: underline;
        text-decoration-color: #dde;
    }
    
    .blog-post-date-2 {
        font-size: 14px;
        color: #669;
    }
    
    .no-link-date {
        color: #666;
        text-decoration: none;
    }
    
    .no-link-date:hover {
        color: #333;
        text-decoration: none;
    }
    
    .no-link-text {
        color: #000;
        text-decoration: none;
    }
    
    .no-link-text:hover {
        color: #222;
        text-decoration: none;
    }
    
    .blog-post-text-2 {
        line-height: 1.6;
    }
    
    .blogContCases {
        display: grid;
        grid-template-columns: 1fr 1fr;
    }
    /* .blogContCases .blog-post-2 {
            margin: 10px 10px;
        } */
    /* Copy */
    
    .paper {
        background-color: #eee;
        border-radius: 10px;
        padding: 15px 10px;
        display: grid;
        width: 100%;
        display: grid;
        column-gap: 3px;
        grid-template-columns: 1fr 1fr;
        box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 8px;
    }
    
    .infoTable {
        padding: 10px;
        display: grid;
        grid-template-columns: 1fr 1fr 1fr 1fr;
        /* gap: 5px; */
        flex-direction: row;
        flex-basis: 70px;
        flex-wrap: wrap;
    }
    
    .cell {
        border-style: hidden solid hidden solid;
        border-color: #ddd;
        border-width: 0.5px;
        text-align: center;
    }
    
    .hx {
        background-color: #f9f9f9;
        padding: 20px;
        margin: 5px 10px;
        border-radius: 10px;
        box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
    }
    
    .twoColumnar {
        column-count: 2;
        margin: 5px
    }
    
    a.float {
        margin: 5px 20px;
        width: 110px;
    }
    
    .vital {
        background-color: #ffe0e0;
        padding: 10px;
        margin: 5px 10px;
        border-radius: 10px;
        display: grid;
        column-gap: 3px;
        row-gap: 5px;
        grid-template-columns: 0.6fr 1fr;
        /* grid-row: span 2; */
        box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
    }
/* ... */

